--- a/database.toml
+++ b/database.toml
@@ -1,4 +1,4 @@
 db_name = "example_db"
 tables = ["users", "products", "orders"]
-def max_tables = 10
-@max_tables
+max_tables = 10
+max_tables_ref = "max_tables"
